--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm Jane Doe
+# Hi, I'm Justin Curry
 
-I'm creating noice web experiences for the next generation of consumer-facing companies
+A software developer focused on mastering the past and preparing for the future
