--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,30 +1,30 @@
 ## Projects
 
 <ProjectCard
-  title="My projects are gonna go here"
-  link="#"
-  bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
+  title="Kings Clothing"
+  link="https://kingsclothing.netlify.app"
+  bg="linear-gradient(to right, #3b3638 0%, #ededed 100%)"
 >
-  Words words words words words
+A clothing website built with react, redux, and firebase.
 </ProjectCard>
 <ProjectCard
-  title="My projects are gonna go here"
-  link="#"
-  bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
+  title="Explr"
+  link="https://explr.netlify.app"
+  bg="linear-gradient(to right, #b9f7a8 0%, #378024 100%)"
 >
-  Words words words words words
+  An outdoors adventures website built with pure css
 </ProjectCard>
 <ProjectCard
-  title="My projects are gonna go here"
+  title="Finding Nemo"
   link="#"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  Words words words words words
+  A facial recognition app built with React and Clarafai's api
 </ProjectCard>
 <ProjectCard
-  title="My projects are gonna go here"
+  title="Mastermind"
   link="#"
-  bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
+  bg="linear-gradient(to right, #ff246d 0%, #fffcfd 100%)"
 >
-  Words words words words words
+  the classic game redesigned with React
 </ProjectCard>
