--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -2,14 +2,14 @@
 
 <ProjectCard
   title="Kings Clothing"
-  link="https://kingsclothing.netlify.app"
+  link="#"
   bg="linear-gradient(to right, #3b3638 0%, #ededed 100%)"
 >
 A clothing website built with react, redux, and firebase.
 </ProjectCard>
 <ProjectCard
   title="Explr"
-  link="https://explr.netlify.app"
+  link="#"
   bg="linear-gradient(to right, #b9f7a8 0%, #378024 100%)"
 >
   An outdoors adventures website built with pure css
