--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -5,26 +5,26 @@
   link="#"
   bg="linear-gradient(to right, #3b3638 0%, #ededed 100%)"
 >
-A clothing website built with react, redux, and firebase.
+A clothing website built with React, Redux, and Firebase.
 </ProjectCard>
 <ProjectCard
   title="Explr"
   link="#"
   bg="linear-gradient(to right, #b9f7a8 0%, #378024 100%)"
 >
-  An outdoors adventures website built with pure css
+  An outdoors adventures website built with pure CSS
 </ProjectCard>
 <ProjectCard
   title="Finding Nemo"
   link="#"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  A facial recognition app built with React and Clarafai's api
+  A facial recognition app built with React and Clarifai api
 </ProjectCard>
 <ProjectCard
   title="Mastermind"
   link="#"
   bg="linear-gradient(to right, #ff246d 0%, #fffcfd 100%)"
 >
-  the classic game redesigned with React
+  The classic game redesigned with React
 </ProjectCard>
