added working links to my projects

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -2,14 +2,14 @@
 
 <ProjectCard
   title="Kings Clothing"
-  link="#"
+  link="https://kingsclothing.netlify.app/"
   bg="linear-gradient(to right, #3b3638 0%, #ededed 100%)"
 >
 A clothing website built with React, Redux, and Firebase.
 </ProjectCard>
 <ProjectCard
   title="Explr"
-  link="#"
+  link="https://explr.netlify.app/"
   bg="linear-gradient(to right, #b9f7a8 0%, #378024 100%)"
 >
   An outdoors adventures website built with pure CSS
@@ -23,7 +23,7 @@ A clothing website built with React, Redux, and Firebase.
 </ProjectCard>
 <ProjectCard
   title="Mastermind"
-  link="#"
+  link="https://jsmastermind.netlify.app/"
   bg="linear-gradient(to right, #ff246d 0%, #fffcfd 100%)"
 >
   The classic game redesigned with React
